@@ -1,5 +1,10 @@
 2009-07-08  Adam Nemet  <anemet@caviumnetworks.com>
 
+	* simplify-rtx.c (simplify_binary_operation_1) <AND>: Transform (and
+        (truncate)) into (truncate (and)).
+
+2009-07-08  Adam Nemet  <anemet@caviumnetworks.com>
+
 	* combine.c (make_extraction): Check TRULY_NOOP_TRUNCATION before
 	creating LHS paradoxical subregs.  Fix surrounding returns to
 	use NULL_RTX rather than 0.
